Adjusted guide trophy section styling for all screen sizes

--- a/guides/templates/guide_detail.html
+++ b/guides/templates/guide_detail.html
@@ -15,7 +15,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="pt-4 pb-2 d-flex flex-column align-items-md-center">
-            <div class="border col-md-4 col-lg-8">
+            <div class="border col-12 col-md-8 col-lg-8">
                 <h3 class="pt-2 ps-1">Trophy title: {{trophies.title}}</h3>
                 {% if "placeholder" in trophies.featured_image.url %}
                 <img class="img-thumbnail" src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="placeholder">
