--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -9,7 +9,7 @@
       <div class="border col-md-4 col-lg-">
         <h3 class="text-center">{{game.title}}</h3>
         {% if "placeholder" in game.featured_image.url %}
-        <img class="img-thumbnail" src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="placeholder">
+        <img class="img-thumbnail" src="{% static 'images/elden-ring-cover.jpg' %}" alt="placeholder image">
         {% else %}
         <img class="img-thumbnail" src=" {{ game.featured_image.url }}" alt="{{ game.title }}">
         {% endif %}
@@ -52,7 +52,7 @@
     </div>
     <div class="col-11 col-md-4 col-lg-6 trophy-images border m-1">
       {% if "placeholder" in trophy.featured_image.url %}
-      <img class="image-size" src="{% static 'static/images/elden-ring-cover.jpg' %}"
+      <img class="img-thumbnail" src="{% static 'images/elden-ring-cover.jpg' %}"
         alt="placeholder image">
       {% else %}
       <img class="img-thumbnail" src=" {{ trophy.featured_image.url }}"
