--- a/guides/templates/guides_not_approved.html
+++ b/guides/templates/guides_not_approved.html
@@ -3,18 +3,25 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+<h3 class="text-center text-lg-start ps-3">Approve Guides</h3>
+<div class="container-fluid">
+    <div class="row col-12 col-md-10 mt-3 offset-md-2 ms-2">
+        <ul> 
+            <!-- Iterate over guides not approved -->
+            
+            {% for guide in object_list %} 
+            <!-- Display guides awaiting approval -->
+            <li><a href="{% url 'approve-guide' guide.pk %}">{{ guide.title }}</a></li> 
+            <hr/> 
+            <!-- if all guides approved-->
+            {% empty %} 
+            <li>No Guides to approve.</li>
+            {% endfor %}
+            <a class="btn btn-primary pb-2" href="{% url 'game' %}">Back</a> 
+        </ul>
 
-<ul> 
-    <!-- Iterate over guides not approved -->
-    {% for guide in object_list %} 
-    <!-- Display guides awaiting approval -->
-    <li><a href="{% url 'approve-guide' guide.pk %}">{{ guide.title }}</a></li> 
-    <hr/> 
-    <!-- if all guides approved-->
-    {% empty %} 
-    <li>No Guides to approve.</li>
-    <a href="{% url 'game' %}">Back</a> 
-    {% endfor %} 
-</ul>
+    </div>
+</div>
+
 
 {% endblock %}
