--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -5,7 +5,7 @@
 <!--Guide Form Element-->
 <div class="container-fluid">
     <div class="row col-2 col-md-8 col-xl-12">
-        <form method="GET" action="{% url 'game' %}" class="d-flex flex-column flex-lg-row genre-form">
+        <form method="GET" action="{% url 'game' %}" class="d-flex flex-column flex-xl-row genre-form">
             {{form.as_p}}
             <input type="submit" value="Submit" class="btn btn-success form-btn">
         </form>
