--- a/guides/templates/guide_detail_view.html
+++ b/guides/templates/guide_detail_view.html
@@ -2,8 +2,9 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
+
 <div class="d-flex flex-column align-items-center guide-info">
-    <a href="{% url 'guide-view' guide.pk %}" class="text-center pt-3">{{guide.title}}</a>
+    <a href="" class="text-center pt-3">{{guide.title}}</a>
     <div class="col-12 col-md-8 border">
         <p class="text-break p-3">{{guide.body}}</p>
         <!--If the user is the guide author they can edit or delete there own-->
@@ -22,11 +23,13 @@
                 {% csrf_token %}
                 <button type="submit" name="guide_id" value="{{ guide.id }}" class="btn btn-primary">Like</button> {{ total_likes }} - Likes
             </form> 
-            <button class="btn btn-danger">Dislike</button>
+            <form action="{% url 'dislike_guide' guide.pk %}" method="POST">
+                {% csrf_token %}
+                <button type="submit" name="guide_id" value="{{ guide.id }}" class="btn btn-danger">Dislike</button> {{ total_dislikes }} - Dislikes
+            </form> 
             {% if user.is_authenticated %}
             <a href="" class="btn btn-success">Comment</a>
             {% endif %}
-            {{comment.body}}
         </div>
     </div>
 </div>
