--- a/guides/templates/delete_comment.html
+++ b/guides/templates/delete_comment.html
@@ -3,7 +3,7 @@
 <!--Delete Comment Element-->
 <div class="container-fluid">
     <h3 class="text-center">Delete Comment</h3>
-    <p class="text-center">Are you sure you want to delete guide {{comment.title}} this action can't be undone
+    <p class="text-center">Are you sure you want to delete this comment this action can't be undone
         or press back to
         return to the game list.</p>
     <div class="row">
