--- a/guides/templates/add_comment.html
+++ b/guides/templates/add_comment.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-<!--Add Guide Element-->
+<!--Add Comment Element-->
 <h3 class="text-center text-lg-start ps-3">Add Comment</h3>
 <div class="container-fluid">
     <div class="row col-12">
