--- a/guides/templates/approve_guides.html
+++ b/guides/templates/approve_guides.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load crispy_forms_tags %}
 
-<!--Add Guide Element-->
+<!--Approve Guide Element-->
 <h3 class="text-center text-lg-start ps-3">Approve Guide</h3>
 <div class="container-fluid">
     <div class="row col-12">
