--- a/guides/templates/guide_detail_view.html
+++ b/guides/templates/guide_detail_view.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-
+<!--Guide Detail Element-->
 <div class="d-flex flex-column align-items-center guide-info">
     <a href="" class="text-center pt-3">{{guide.title}}</a>
     <div class="col-12 col-md-8 border">
@@ -32,7 +32,7 @@
         </div>
     </div>
 </div>
-
+<!--Comment Element-->
 <div class="d-flex flex-column align-items-center">
     <h3 class="pt-2">Comments</h3>
     <div class="col-12 col-md-8 border">
@@ -42,6 +42,7 @@
         {% for comment in guide.comments.all %}
         <div class="border">
             <p>{{comment.body}}</p>
+            <!--Checking to see if the user is logged in and the author they can then edit and delete there comments-->
             {% if user.is_authenticated and comment.author == user %}
             <div class="guide-buttons d-flex align-items-center justify-content-between flex-column">
                 <a class="btn btn-success" href="{% url 'edit-comment' comment.pk %}">Edit Comment</a>
