--- a/guides/templates/delete_comment.html
+++ b/guides/templates/delete_comment.html
@@ -1,18 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
-<!--Delete Comment Element-->
+<!--Delete Guide Element-->
 <div class="container-fluid">
     <h3 class="text-center">Delete Comment</h3>
+    {% if user.is_superuser %}
+    <p class="text-center">Are you sure you want to this comment this action can't be undone
+        or press back to
+        return to the comments list.</p>
+    {% else %}
     <p class="text-center">Are you sure you want to delete this comment this action can't be undone
         or press back to
-        return to the game list.</p>
+        return to the games list.</p>
+    {% endif %}
     <div class="row">
         <div class="form-group">
             <form id="commentForm" method="post">
                 {% csrf_token %}
                 <div class="d-flex flex-column align-items-center">
+                    {% if user.is_superuser %}
+                    <a href="{% url 'comments-list' %}" class="btn btn-primary btn-lg">Back</a>
+                    {% else %}
                     <a href="{% url 'game' %}" class="btn btn-primary btn-lg">Back</a>
-                    <button id="submitButton" type="submit" class="btn btn-danger btn-lg">Delete</button> 
+                    {% endif %}
+                    <button id="submitButton" type="submit" class="btn btn-danger btn-lg">Delete</button>
                 </div>
             </form>
         </div>
