--- a/guides/templates/trophy_detail.html
+++ b/guides/templates/trophy_detail.html
@@ -14,7 +14,7 @@
                 {% else %}
                 <img class="img-thumbnail" src=" {{ trophies.featured_image.url }}" alt="{{ trophies.title }}">
                 {% endif %}
-                <div class="col-md-4 col-lg-12 ps-2">
+                <div class="col-md-12 col-lg-12 ps-2">
                     <p class="trophy-description">Trophy Description: {{trophies.description}}</p>
                     <p class="d-none d-sm-block trophy-rarity">
                         <i class="fa fa-solid fa-trophy"></i>{{trophies.rarity}}
@@ -35,7 +35,7 @@
         <!--Checking if user is not logged in and there being no guides-->
         {% if not trophies.guides.all and not user.is_authenticated %}
         <div class="col-12 pt-3 d-flex flex-column align-items-center">
-            <p class="text-center">
+            <p class="text-center col-md-8">
                 Do you want to help out other fellow trophy hunters like yourself? Then simply login or create an
                 account with us to join our ever growing community!
             </p>
@@ -43,7 +43,7 @@
             <a class="btn btn-primary" href="{% url 'account_signup' %}">Register</a>
             <!--checking if user is logged in and there not being any guides-->
             {% elif not trophies.guides.all and user.is_authenticated %}
-            <p class="text-center">
+            <p class="text-center col-md-8">
                 Do you want to help out other fellow trophy hunters like yourself? Then simply click create guide and
                 take your next step
                 in joining our ever growing community
@@ -99,7 +99,7 @@
         <!--Checking if the user is logged in and there is guides-->
         {% if trophies.guides.all and user.is_authenticated %}
         <div class="col-12 pt-3 d-flex flex-column align-items-center">
-            <p class="text-center">
+            <p class="text-center col-md-8">
                 Do you want to help out other fellow trophy hunters like yourself? Then simply click create guide and
                 take your next step
                 in joining our ever growing community.
@@ -109,7 +109,7 @@
             <!--Checking if there are guides and the user is not logged in-->
             {% if trophies.guides.all and not user.is_authenticated %}
             <div class="col-12 pt-3 d-flex flex-column align-items-center">
-                <p class="text-center">
+                <p class="text-center col-md-8">
                     To create your own excellent guides like the ones above just simply login in below to help out other
                     trophy hunters!
                 </p>
