--- a/guides/templates/guide_detail_view.html
+++ b/guides/templates/guide_detail_view.html
@@ -36,9 +36,6 @@
 <div class="d-flex flex-column align-items-center p-3">
     <h3 class="pt-2">Comments</h3>
     <div class="col-12 col-md-8 border">
-        {% if not guide.comments.all %}
-        <p>No comment yet <a class="btn btn-success" href="{% url 'add-comment' guide.pk %}">Add</a> </p>
-        {% else %}
         {% for comment in guide.comments.all %}
         <div class="border mb-3">
             <p class="ms-1">{{comment.body}}</p>
@@ -56,8 +53,10 @@
         </div>
 
         {% endfor %}
-        {% endif %}
-        <a class="btn btn-success ms-1" href="{% url 'add-comment' guide.pk %}">Add Comment</a>
+        <div class="pt-2">
+            <a class="btn btn-success ms-1" href="{% url 'add-comment' guide.pk %}">Add Comment</a>
+        </div>
+        
 
     </div>
         {% if user.is_superuser %}
