Adjusted guide, comment color styling

--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -15,7 +15,7 @@
 <!--Guide table results-->
 <div class="table-responsive p-2">
     <h3 class="genre-list">Game List</h3>
-    <table class="table table-sm">
+    <table class="table table-sm genre-table">
         <thead>
             <tr>
                 <th>Title</th>
