--- a/guides/templates/guide_detail_view.html
+++ b/guides/templates/guide_detail_view.html
@@ -5,7 +5,7 @@
 <!--Guide Detail Element-->
 <div class="d-flex flex-column align-items-center guide-info p-3">
     <a href="" class="text-center pt-3">{{guide.title}}</a>
-    <div class="col-12 col-md-8 border">
+    <div class="col-12 col-md-8 border guide-detail">
         <p class="text-break p-3">{{guide.body}}</p>
         <!--If the user is the guide author they can edit or delete there own-->
         {% if user.is_authenticated and guide.author == user %}
@@ -35,9 +35,9 @@
 <!--Comment Element-->
 <div class="d-flex flex-column align-items-center p-3">
     <h3 class="pt-2">Comments</h3>
-    <div class="col-12 col-md-8 border">
+    <div class="col-12 col-md-8 border comment-section">
         {% for comment in guide.comments.all %}
-        <div class="border mb-3">
+        <div class="border mb-3 comment-info">
             <p class="ms-1">{{comment.body}}</p>
             <!--Checking to see if the user is logged in and the author they can then edit and delete there comments-->
             {% if user.is_authenticated and comment.author == user %}
