--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -32,7 +32,7 @@
 <div class="contianer fluid">
   <div class="row ps-2 col-md-10 mt-3 offset-md-2">
     <h1>{% trans "Sign In" %}</h1>
-    <p>{% blocktrans %}Welcome back to Last Trophy to if you wish to edit your guides or rate other guides please login in below. If you have not created an account yet, then please
+    <p class="mr-2 p-3">{% blocktrans %}Welcome back to Last Trophy to if you wish to edit your guides or rate other guides please login in below. If you have not created an account yet, then please
       <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
     {% endif %}
 
