--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -6,7 +6,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="d-flex flex-column align-items-md-center">
-      <div class="border col-md-4 col-lg-">
+      <div class="border col-md-4 game-section">
         <h3 class="text-center">{{game.title}}</h3>
         {% if "placeholder" in game.featured_image.url %}
         <img class="img-thumbnail" src="{% static 'images/elden-ring-cover.jpg' %}" alt="placeholder image">
