--- a/guides/templates/add_comment.html
+++ b/guides/templates/add_comment.html
@@ -5,7 +5,7 @@
 <!--Add Comment Element-->
 <h3 class="text-center text-lg-start ps-3">Add Comment</h3>
 <div class="container-fluid">
-    <div class="row col-12">
+    <div class="row">
         <div class="form-group">
             <form id="commentForm" method="post">
                 {% csrf_token %}
