--- a/guides/templates/delete_comment.html
+++ b/guides/templates/delete_comment.html
@@ -4,7 +4,7 @@
 <div class="container-fluid">
     <h3 class="text-center">Delete Comment</h3>
     {% if user.is_superuser %}
-    <p class="text-center">Are you sure you want to this comment this action can't be undone
+    <p class="text-center">Are you sure you want to delete this comment this action can't be undone
         or press back to
         return to the comments list.</p>
     {% else %}
