--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+
 <!--Game Detail Element-->
 <div class="container-fluid">
   <div class="row">
@@ -44,7 +45,8 @@
 <div class="row">
   <h3 class="d-flex flex-column align-items-md-center ms-1">Trophies</h3>
   <!--For each trophy of this game list all the trophies which was specified in the view-->
-  {% for trophy in trophies %}
+  
+  {% for trophy in page_obj %}
   <div class="d-flex flex-column align-items-md-center trophy-section pb-1">
     <div class="trophy-name">
       <a href="{% url 'trophy-detail' trophy.slug %}" class="trophy-title"><strong>{{trophy.title}}</strong></a>
@@ -72,6 +74,21 @@
       {% endif %}
   {% endif %}
   {% endfor %}
+
+  
 </div>
+
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li>
+                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV</a>
+            </li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+            {% endif %}
+        </ul>
+    </nav>
 
 {% endblock %}
